hphp/hack/test/typecheck/new_inference/nothing/toplevel.php.legacy.exp
File "toplevel.php", line 4, characters 18-25:
Unbound name: nothing (an object type) (Naming[2049])
